# c3spoc

./: Cargo.toml  LICENSE  README.md  Rocket.toml
src/: api.rs  main.rs  printer.rs
static/: index.html
