[package]
name = "c3spoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brother-ql-rs = {git = "https://github.com/anghenfil/brother-ql-rs.git"}
rocket = { version = "0.5.0", features = ["json"] }
image = "0.24.7"
serde = { version = "1.0.193", features = ["derive"] }
rusb = "0.5"
tokio = { version = "1.35.1", features = ["full"] }